--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
+pull_request_title: '[ci skip] New Crowdin translations'
+commit_message: '[ci skip]'
 files:
   - source: /public/locales/en-US/*.json
     translation: /public/locales/%locale%/%original_file_name%
