Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,3 +3,5 @@ commit_message: '[ci skip]'
 files:
   - source: /public/locales/en-US/*.json
     translation: /public/locales/%locale%/%original_file_name%
+  - source: src/pages/docs/en-US/*.mdx
+    translation: src/pages/docs/%locale%/%original_file_name%
